# phaseq

./: LICENSE  README.md  deriv.org  deriv.tex  flake.nix  phaseq.py  pyproject.toml  tests.py  todo.org  todo.txt
phaseq/: foo.py  phaseq.py  scf.py
src/phaseq/: __init__.py  convenience.py  elements.py  phaseq.py  scf.py
tests/: 6-31g_st__st_.1.json  benchmark.py  loops_to_convs.py  test_basis_from_json.py  test_interaction.py  test_kinetic.py  test_nuclear.py  test_overlap.py  test_scf.py  test_scf_from_json.py
tests/old/: conv_matrix.py  convolve.py  ref.py  test_functions.py  test_interaction_matrix.py  test_interaction_sum.py  test_matrix.py  test_nuclear_inner_sum.py  test_nuclear_tmp_old.py  test_overlap.py  test_phonon.py  test_scf.py  test_trafos.py  tests.py  transformations.py
